# Learning-Python

./: Basics.py  oop.py  sample.txt
02  Python Basics/: 01_variables.py  02_data_types.py  03_type_casting.py  04_collections_list.py  05_collections_tuple.py  06_collection_dict.py  07_collection_set.py  08_operators.py  09_control_flow_if_elif_else.py  10_control_flow_match_case.py  11_loops_for_while.py  12_functions.py  13_args.py  14_kwargs.py  15_positional_keyword_arguments.py  16_decorators.py  17_list_comprehension.py
03 Files & OS Operations/: 01_reading_writing_txt_file.py  02_writing_csv_file.py  03_reading_csv_file.py  04_pathlib.py  05_os_shutil.py  06_try_catch.py
04  Modules and Packages/: math_utils.py
05 VENV & Dependency Management/poetry-demo/: pyproject.toml
06 Useful Built-in Libraries/: 01_datetime.py  02_json.py  03_regular_expression.py  04 subprocess.py  05_os.py  06_sys.py
07 Logging/: 01_basic.py  02_customized.py  03_logging_to_file.py  04_logging_exception_with_traceback.py  05_structured_logging_with_extra_fields.py
08 Modern Python Features/: 01_type_hints.py  02_f_strings.py  03_structural_pattern_matching.py
09 Working with Data/: 01_parsing_json.py  02_calling_external_apis_requests.py  03_calling_external_apis_httpx.py  05_csv_excel.py  06_csv_excel_pandas.py  07_regex.py
10 Project/: .env  .gitignore  README.md  main.py
11 Weak Concepts/: 02_list_comprehension.py  03_pandas.py  04_dict.py  05_notebook.ipynb  06_iterators.py  07_abstract_class.py  08_generators.py  data.csv
12 OOP/: 01_classes.py  02_inheritance.py  (+9 more)
(+14 files in other folders)
