[project]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "abdulmateenzwl",email = "abdulmateenkhanzwl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorflow (>=2.19.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "poetry_demo", from = "src"}]


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
